# dioxus-demo

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE.txt  README.md  build-serve-dist.sh  site.sh
assets/: stylesheet.css
src/: lib.rs  main.rs  route.rs
src/component/: colophon.rs  high_five.rs  home.rs  mod.rs  nav.rs  template.rs
src/components/: app.rs  colophon.rs  high_five.rs  home.rs  nav.rs  page_not_found.rs  template.rs
