[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
# description = "project description"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-keywords-field
# keywords = ["keyword"]
license = "MIT"
name = "dioxus-demo"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-demo"
version = "0.0.0-SNAPSHOT"

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
