[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
description = "Demonstration of Dioxus using Static Site Generation (SSG)"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-keywords-field
# keywords = ["keyword"]
license = "MIT"
name = "dioxus-demo"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-demo"
version = "0.0.0-SNAPSHOT"

[dependencies]
dioxus = { version = "0.6.1", features = ["fullstack", "router"] }
dioxus-logger = "0.6.1"
tracing = "0.1.41"

[dev-dependencies]
# TODO: Can we remove this when Dioxus v0.6.2 is released?
dioxus-isrg = "0.6.1"
# TODO: Can we remove this when Dioxus v0.6.2 is released?
dioxus-ssr = "0.6.1"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
