[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
# Use the categories from https://crates.io/categories
# categories = ["category-name"]
description = "Demonstration of Dioxus using Static Site Generation (SSG)"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-keywords-field
# keywords = ["keyword"]
license = "MIT"
name = "dioxus-demo"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/dioxus-demo"
version = "0.7.0-SNAPSHOT"

[dependencies]
dioxus = { version = "0.7.2", features = ["fullstack", "router"] }
tracing = "0.1.44"

[dev-dependencies]

[features]
default = ["web"]
server = ["dioxus/server"]
web = ["dioxus/web"]

# [package.metadata]
# wasm-opt = false

# [profile.wasm-dev]
# inherits = "dev"
# opt-level = 1
